--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-# Operating System Files
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-*.DS_Store
-Thumbs.db
-
-# Build Files #
-
-bin
-target
-build/
-.gradle
-
-# Eclipse Project Files #
-
+### STS ###
+.apt_generated
 .classpath
+.factorypath
 .project
 .settings
+.springBeans
 
-# IntelliJ IDEA Files #
-
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
 *.ipr
-*.iws
-*.idea
 
-# Test files
-
-accessingdataneo4j.db
-dependency-reduced-pom.xml
-out
-README.html
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
